# cactus-app-core-service

./: .bra.toml  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.rs  cargo.toml  go.mod  go.sum  makefile  proto-gen.sh
models/: anime.go  db.go  episode.go  episode_seen.go  episode_subtitle.go  genre.go  language.go  release.go  release_description.go  release_type.go
proto/: anime.pb.go  anime.proto  common.pb.go  common.proto  episode.pb.go  episode.proto  genre.pb.go  genre.proto  helloworld.pb.go  helloworld.proto  language.pb.go  language.proto  release.pb.go  release.proto  release_description.pb.go  release_description.proto  release_type.pb.go  release_type.proto
services/: anime.go  common.go  episode.go  genre.go  health.go  language.go  release.go  release_description.go  release_type.go
src/: db.rs  main.rs  models.rs  services.rs
src/db/: models.rs
src/db/models/: anime.rs
src/services/: anime.rs  greeter.rs  mod.rs
